# itch-downloader

./: Cargo.toml  LICENSE  README.md  about.hbs  about.toml
.github/workflows/: release.yml
src/: main.rs
